# Image-Palette-Extractor

./: .gitignore  README.md  cli.py  color_utils.py  image_palette.py  image_utils.py  main.py  pyproject.toml  requirements.txt
image_palette_extractor/: main.py
